--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -219,5 +219,8 @@
     "cannot_create_strong_creds_failed_sig": "Cannot create strong credentials, because the signature could not be produced.",
     "could_not_create_strong_creds": "Could not create strong credentials for distributed operation with {{url}}.",
     "dsa_bind_with_simple_creds": "Simple authentication attempt from {{source}}.",
-    "dsa_bind_with_strong_creds": "Strong authentication attempt from {{source}}."
+    "dsa_bind_with_strong_creds": "Strong authentication attempt from {{source}}.",
+    "dsa_bind_pwd_end": "Network peer {{host}} attempted to bind as DSA {{dsa}}, and their password was correct, but the remote DSA's password has expired beyond the point after which they cannot reset it themselves. Your administrative intervention may be needed to repair this broken DSA binding.",
+    "dua_bind_pwd_end": "Network peer {{host}} attempted to bind, and their password was correct, but the remote user's password has expired beyond the point after which they cannot reset it themselves. Your administrative intervention may be needed to assist this user.",
+    "cpw_pwd_end": "Association {{aid}} attempted to change their password, and their password was correct, but their password expired beyond the point after which they cannot reset it themselves. Your administrative intervention may be needed to assist this user."
 }
