--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -224,5 +224,6 @@
     "dua_bind_pwd_end": "Network peer {{host}} attempted to bind, and their password was correct, but the remote user's password has expired beyond the point after which they cannot reset it themselves. Your administrative intervention may be needed to assist this user.",
     "cpw_pwd_end": "Association {{aid}} attempted to change their password, and their password was correct, but their password expired beyond the point after which they cannot reset it themselves. Your administrative intervention may be needed to assist this user.",
     "add_entry": "Association {{aid}} created new entry: DB_ID={{id}}, DSE_UUID={{uuid}}, ENTRY_UUID={{euuid}}, DN='{{dn}}'",
-    "mod_entry": "Association {{aid}} modified entry: DB_ID={{id}}, DSE_UUID={{uuid}}, ENTRY_UUID={{euuid}}, DN='{{dn}}'"
+    "mod_entry": "Association {{aid}} modified entry: DB_ID={{id}}, DSE_UUID={{uuid}}, ENTRY_UUID={{euuid}}, DN='{{dn}}'",
+    "auto_accepted_ob": "Automatically-accepted operational binding because you have MEERKAT_OB_AUTO_ACCEPT=1: OB_TYPE={{type}} OB_ID={{obid}} UUID={{uuid}}."
 }
