--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -243,5 +243,5 @@
     "scr_abstained": "Search continuation not performed. PROHIBITED_BY_USER={{prohibited}}; UNAUTHORIZED={{unauthorized}}.",
     "lcr_abstained": "List continuation not performed. PROHIBITED_BY_USER={{prohibited}}; UNAUTHORIZED={{unauthorized}}.",
     "failed_to_normalize_dn": "Failed to normalize DN: {{dn}}",
-    "zero_access_points_in_cr": "Zero access points found in continuation reference for target object '{{dn}}'",
+    "zero_access_points_in_cr": "Zero access points found in continuation reference for target object '{{dn}}'"
 }
