Log non-authz to discover searched entries

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -246,5 +246,6 @@
     "zero_access_points_in_cr": "Zero access points found in continuation reference for target object '{{dn}}'",
     "requester": "Requester for association {{aid}}, invocation {{iid}} is '{{r}}'.",
     "requester@search_i": "Requester for association {{aid}}, Search (I) invocation {{iid}} is '{{r}}'.",
-    "requester@search_ii": "Requester for association {{aid}}, Search (II) invocation {{iid}} is '{{r}}'."
+    "requester@search_ii": "Requester for association {{aid}}, Search (II) invocation {{iid}} is '{{r}}'.",
+    "not_authz_search": "Association {{aid}} is not allowed to discover DSE {{dn}}."
 }
