--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -206,5 +206,6 @@
     "pwd_end": "Your password expired beyond the point after which you cannot reset it yourself. You will need administrator intervention.",
     "compare_pwd_compound_entry": "You cannot compare passwords for a whole compound entry. The familyGrouping option must be set to entryOnly when using compare to assert passwords.",
     "unrecognized_user_pwd_alt": "Unrecognized UserPwd alternative. Password cannot be set.",
-    "anon_dop": "DOP operations cannot be performed anonymously."
+    "anon_dop": "DOP operations cannot be performed anonymously.",
+    "hierarchy_spans_service_admin_areas": "Cannot add the hierarchyParent attribute, because it would cause this hierarchical group to span multiple service administrative areas."
 }
