--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -211,5 +211,8 @@
     "hierarchy_spans_service_admin_areas": "Cannot add the hierarchyParent attribute, because it would cause this hierarchical group to span multiple service administrative areas.",
     "relaxation_max_lt_min": "Relaxation maximum was less than the minimum. The search request cannot be satisfied. Max={{max}}. Min={{min}}.",
     "zonal_zero_mappings": "Key attributes for zonal match could not be mapped to a zone.",
-    "zonal_multiple_mappings": "Key attributes for zonal match mapped to multiple zones."
+    "zonal_multiple_mappings": "Key attributes for zonal match mapped to multiple zones.",
+    "search_escaped_svc_admin_area": "Distributed search operation with invoke id {{iid}} attempted (maybe by accident) to escape a service administrative area.",
+    "requestedServiceNotAvailable": "There is no search rules defined for the base object requested by invocation {{iid}}.",
+    "invalid_matching_use": "Invalid matching use for attribute types: {{attrs}}"
 }
