Log waiting for OB approval

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -250,5 +250,6 @@
     "search_complete": "Search complete for invocation {{iid}} by association {{aid}}.",
     "search_complete@limit": "Search limit reached for invocation {{iid}} by association {{aid}}: {{limit}}",
     "multiple_search_rules_of_same_user_class": "Detected multiple permitted and applicable search rules having user class {{user_class}}. It may be desirable to re-work the search rule definitions.",
-    "unable_to_find_search_rule": "Unable to find search rule {{id}} within DMD {{dmd_id}}. Search invocation {{iid}} will proceed without regulation by this rule."
+    "unable_to_find_search_rule": "Unable to find search rule {{id}} within DMD {{dmd_id}}. Search invocation {{iid}} will proceed without regulation by this rule.",
+    "awaiting_ob_approval": "Awaiting DSA administrator approval of operational binding {{uuid}}."
 }
