--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -165,7 +165,7 @@
     "idm_reject": "Reject with reason {{code}} received from {{source}}.",
     "idm_abort": "Abort with reason {{code}} received from {{source}}.",
     "lcr_attempt": "Attempting to continue list operation {{iid}} for association {{aid}} in DSA {{ae}}.",
-    "lcr_null_response": "No response from remote DSA {{ae}} in chained list continuation for invocation {{iid}}.",
+    "lcr_null_response": "Null response from APInfo Procedure chaining to {{ae}} in chained list continuation for invocation {{iid}}.",
     "lcr_error_response": "Error from from remote DSA {{ae}} in chained list continuation for invocation {{iid}}. The error code and first few bytes of the encoded error are: {{errcode}} {{errbytes}}.",
     "lcr_undefined_result": "Undefined result in response from remote DSA {{ae}} in chained list continuation for invocation {{iid}}. This is either a bug or malicious behavior.",
     "lcr_invalid_invoke_id_response": "Invalid invokeID format in response from remote DSA {{ae}} in chained list continuation for invocation {{iid}}. This is either a bug or malicious behavior.",
@@ -235,7 +235,7 @@
     "ap_missing_ae_title": "Access point with ID {{id}} is stored in the database with a malformed AE-title. It should be an array of JSON-encoded RDNs.",
     "keylog": "SENSITIVE: TLS session with network peer {{peer}} has secret key: {{key}}",
     "scr_attempt": "Attempting to continue search operation {{iid}} for association {{aid}} in DSA {{ae}}.",
-    "scr_null_response": "No response from remote DSA {{ae}} in chained search continuation for invocation {{iid}}.",
+    "scr_null_response": "Null response from APInfo Procedure chaining to {{ae}} in chained search continuation for invocation {{iid}}.",
     "scr_error_response": "Error from from remote DSA {{ae}} in chained search continuation for invocation {{iid}}. The error code and first few bytes of the encoded error are: {{errcode}} {{errbytes}}.",
     "scr_undefined_result": "Undefined result in response from remote DSA {{ae}} in chained search continuation for invocation {{iid}}. This is either a bug or malicious behavior.",
     "scr_invalid_invoke_id_response": "Invalid invokeID format in response from remote DSA {{ae}} in chained search continuation for invocation {{iid}}. This is either a bug or malicious behavior.",
