--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -57,6 +57,7 @@
     "duplicate_name": "Duplicate name '{{name}}'. The object represented by this OID will still be usable, but not its name when using LDAP.",
     "checking_if_name_taken_in_nssr": "Checking if name is taken in NSSR via DSP operation {{opid}}.",
     "continuing_name_resolution": "Continuing name resolution via DSP operation {{opid}} for DN: '{{dn}}'",
+    "continuing_name_resolution@nssr": "Continuing name resolution of next RDN {{i}} under NSSR via DSP operation {{opid}} for DN: '{{dn}}'",
     "resolving_name": "Resolving name '{{dn}}' for DSP operation {{opid}}.",
     "received_chained_operation": "Received chained operation with identifier {{opid}} from association {{cid}}.",
     "not_authz_to_add_top_level@hint": "To be able to add an entry to the top level in Meerkat DSA, the environment variable MEERKAT_OPEN_TOP_LEVEL must be set to '1', or there must be entries in this DSA with passwords, or you must be authenticated non-anonymously as an entry that has the boolean may_add_top_level_dse set. The first entry created in this DSA with a password will have this flag set automatically. This was the DN: {{dn}}",
@@ -253,5 +254,6 @@
     "search_complete@limit": "Search limit reached for invocation {{iid}} by association {{aid}}: {{limit}}",
     "multiple_search_rules_of_same_user_class": "Detected multiple permitted and applicable search rules having user class {{user_class}}. It may be desirable to re-work the search rule definitions.",
     "unable_to_find_search_rule": "Unable to find search rule {{id}} within DMD {{dmd_id}}. Search invocation {{iid}} will proceed without regulation by this rule.",
-    "awaiting_ob_approval": "Awaiting DSA administrator approval of operational binding {{uuid}}."
+    "awaiting_ob_approval": "Awaiting DSA administrator approval of operational binding {{uuid}}.",
+    "not_authz_discover": "Association {{aid}} is not authorized to discover DN '{{dn}}'."
 }
