Log next RDN to be resolved

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -256,5 +256,5 @@
     "unable_to_find_search_rule": "Unable to find search rule {{id}} within DMD {{dmd_id}}. Search invocation {{iid}} will proceed without regulation by this rule.",
     "awaiting_ob_approval": "Awaiting DSA administrator approval of operational binding {{uuid}}.",
     "not_authz_discover": "Association {{aid}} is not authorized to discover DN '{{dn}}'.",
-    "entry_not_found@nssr": "Candidate refs empty under NSSR. i={{i}}."
+    "entry_not_found@nssr": "Candidate refs empty under NSSR. i={{i}}. Next RDN to be Resolved={{n}}."
 }
