Update subordinates in NHOB

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -29,6 +29,7 @@
     "alias_but_no_aen": "Alias entry {{id}} had no aliasedEntryName attribute.",
     "subr_for_hob_not_found": "Subordinate entry for agreement {{obid}} (version {{version}}) not found.",
     "failed_to_update_hob": "Failed to update HOB for agreement {{obid}} (version {{version}}): {{e}}",
+    "failed_to_update_nhob": "Failed to update NHOB for agreement {{obid}} (version {{version}}): {{e}}",
     "dsa_returned_no_opcode": "DSA '{{ae}}' returned a result with no opCode, which might have been malicious.",
     "could_not_write_operation_to_dsa": "Could not write operation to DSA '{{ae}}' because of this error: {{e}}",
     "failed_to_access_master": "Failed to access master access point {{dsa}}: {{e}}",
