Add more logging surrounding updating NHOBs

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -103,7 +103,7 @@
     "terminated_ob@reversed": "Terminated operational binding {{uuid}} because there was an error in the DOP result, so the binding is being reverted.",
     "removing_a_context_prefix": "Removing context prefix {{uuid}}.",
     "updating_superior_dsa@subentry": "Updating superior DSA because one of the context prefix's subentries were deleted.",
-    "updating_subordinate@nsssr": "Updating NHOB {{obid}} with subordinate DSA '{{ae_title}}' because a prefix of the NSSR changed.",
+    "updating_subordinate@nssr": "Updating NHOB {{obid}} with subordinate DSA '{{ae_title}}' because a prefix of the NSSR changed.",
     "failed_to_update_superior_dsa": "Failed to update superior DSA with error {{e}}",
     "updated_superior_dsa": "Successfully updated superior DSA.",
     "establishing_hob_via_add_entry": "AddEntry.targetSystem instigated an attempt to create a HOB beneath DSE {{uuid}}.",
@@ -259,5 +259,6 @@
     "awaiting_ob_approval": "Awaiting DSA administrator approval of operational binding {{uuid}}.",
     "not_authz_discover": "Association {{aid}} is not authorized to discover DN '{{dn}}'.",
     "entry_not_found@nssr": "Candidate refs empty under NSSR. i={{i}}. Next RDN to be Resolved={{n}}.",
-    "could_not"
+    "no_masters_to_update@nhob": "No master subordinate DSAs to update for NHOB {{obid}}.",
+    "updating_subordinate_dsas@moddn": "Updating subordinate DSAs (if any), because DSE '{{dn}}' was moved or renamed."
 }
