--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -236,6 +236,7 @@
     "checking_remote_pwd": "Checking remote password asserted by {{source}} via chained compare operation.",
     "error_checking_remote_pwd": "Error checking remote password asserted by {{source}} via chained compare operation: {{e}}",
     "ob_modify_attempt_by_other_ae": "There was an attempt by {{impostor}} to modify an operational binding owned by {{owner}}: OB_TYPE={{type}} OB_ID={{obid}} UUID={{uuid}}.",
+    "ob_terminate_attempt_by_other_ae": "There was an attempt by {{impostor}} to modify an operational binding owned by {{owner}}: OB_TYPE={{type}} OB_ID={{obid}} UUID={{uuid}}.",
     "ap_missing_ae_title": "Access point with ID {{id}} is stored in the database with a malformed AE-title. It should be an array of JSON-encoded RDNs.",
     "keylog": "SENSITIVE: TLS session with network peer {{peer}} has secret key: {{key}}",
     "scr_attempt": "Attempting to continue search operation {{iid}} for association {{aid}} in DSA {{ae}}.",
