Support shadow operational bindings

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -275,5 +275,6 @@
     "received_other_problem": "Other problem initiating remote operation: {{problem}}.",
     "ob_has_no_access_point": "Operational binding {{uuid}} has no access point defined.",
     "ob_proposal_timed_out": "Proposed operational binding {{uuid}} timed out and therefore was auto-rejected.",
-    "err_establishing_ob": "Error establishing operational binding {{uuid}}: {{e}}"
+    "err_establishing_ob": "Error establishing operational binding {{uuid}}: {{e}}",
+    "no_such_object@shadow_supplier_cp": "Cannot honor proposed shadow operational binding {{obid}} because this proposed context prefix does not exist: '{{cp}}'."
 }
