--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -227,5 +227,8 @@
     "other_dsa_reversed_ob_role": "Other DSA attempted to reverse operational binding role. Operational binding {{uuid}} will be terminated.",
     "other_dsa_changed_ob_type": "Other DSA returned a DOP result that changed the binding type. The operational binding will not be recognized.",
     "other_dsa_did_not_choose_binding_id": "Other DSA did not choose an identifier for this operational binding. The operational binding will not be recognized.",
-    "cannot_establish_ob_with_self": "Cannot establish operational binding with self."
+    "cannot_establish_ob_with_self": "Cannot establish operational binding with self.",
+    "no_such_object": "No such object.",
+    "cannot_change_replicated_base_name": "Cannot change replicated base name in shadowing.",
+    "cannot_find_local_base_entry_to_replicate": "Cannot find local entry to serve as the base entry of the replicated area."
 }
